@@ -1,3 +1,9 @@
+globus-gram-job-manager (14.31-1+gt6.@distro@) @distro@; urgency=low
+
+  * Set test case cache dir
+
+ -- Globus Toolkit <support@globus.org>  Tue, 30 Aug 2016 15:57:57 -0400
+
 globus-gram-job-manager (14.30-1+gt6.@distro@) @distro@; urgency=low
 
   * Fix test problem in el5 mock with HOME=/builddir and root user
